--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
+    "vbuild": "NITRO_PRESET=vercel_edge vinxi build",
     "start": "vinxi start"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "postcss": "^8.4.33",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
+    "valibot": "^0.25.0",
     "vinxi": "^0.1.2"
   },
   "engines": {
