--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@planetscale/database": "^1.13.0",
     "@solidjs/router": "^0.10.9",
     "@solidjs/start": "^0.4.9",
     "autoprefixer": "^10.4.16",
+    "drizzle-orm": "^0.29.3",
     "postcss": "^8.4.33",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
@@ -22,6 +24,12 @@
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "drizzle-kit": "^0.20.12"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@solidjs/start@0.4.9": "patches/@solidjs__start@0.4.9.patch"
+    }
   }
 }
