Icons + `typecheck` command + sidebar + login page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
-	"compilerOptions": {
-		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"jsx": "preserve",
-		"jsxImportSource": "solid-js",
-		"allowJs": true,
-		"noEmit": true,
-		"strict": true,
-		"types": ["vinxi/client"],
-		"isolatedModules": true,
-		"paths": {
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
+    "allowJs": true,
+    "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
+    "types": ["vinxi/client", "unplugin-icons/types/solid"],
+    "isolatedModules": true,
+    "paths": {
       "~/*": ["./src/*"]
     }
-	}
+  },
+  "include": ["src/"],
+  "exclude": ["node_modules", "dist"]
 }
