--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@planetscale/database": "^1.13.0",
     "@solidjs/router": "^0.10.9",
     "@solidjs/start": "^0.4.9",
+    "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
-    "nanoid": "^5.0.4",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
     "valibot": "^0.25.0",
@@ -32,6 +32,7 @@
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.20.12",
     "postcss": "^8.4.33",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tsc-silent": "^1.2.2",
     "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.3",
