--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "drizzle-orm": "^0.29.3",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
+    "tiny-invariant": "^1.3.1",
     "valibot": "^0.25.0",
-    "vinxi": "^0.1.3"
+    "vinxi": "^0.1.4"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.168",
+    "@iconify/json": "^2.2.169",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.16",
