--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "vbuild": "NITRO_PRESET=vercel_edge vinxi build"
   },
   "dependencies": {
+    "@kobalte/core": "^0.12.0",
+    "@kobalte/tailwindcss": "^0.9.0",
     "@planetscale/database": "^1.13.0",
     "@solidjs/router": "^0.10.9",
     "@solidjs/start": "^0.4.9",
     "base58": "^2.0.1",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
