--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
     "paths": {
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/", "api/"],
+  "include": ["src/"],
   "exclude": ["node_modules", "dist"]
 }
