--- a/forge/package.json
+++ b/forge/package.json
@@ -6,7 +6,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "dev": "vinxi dev --host 0.0.0.0",
+    "dev": "vite dev --host 0.0.0.0",
     "build": "vinxi build",
     "typecheck": "tsc-silent -p tsconfig.json --suppress @/node_modules/",
     "start": "vinxi start",
@@ -17,30 +17,24 @@
   "dependencies": {
     "@kobalte/core": "^0.12.0",
     "@kobalte/tailwindcss": "^0.9.0",
-    "@planetscale/database": "^1.13.0",
+    "@mattrax/api": "workspace:^",
     "@solidjs/router": "^0.10.9",
-    "@solidjs/start": "^0.4.9",
-    "base58": "^2.0.1",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.3",
+    "hono": "^3.12.5",
     "solid-js": "^1.8.11",
-    "tailwindcss": "^3.4.1",
-    "tiny-invariant": "^1.3.1",
-    "valibot": "^0.25.0",
-    "vinxi": "^0.1.4"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@hono/vite-dev-server": "^0.3.4",
     "@iconify/json": "^2.2.169",
-    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.16",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.12",
     "postcss": "^8.4.33",
     "rollup-plugin-visualizer": "^5.12.0",
-    "tsc-silent": "^1.2.2",
-    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.3",
-    "unplugin-icons": "^0.18.2"
+    "unplugin-icons": "^0.18.2",
+    "vite": "^5.0.11",
+    "vite-plugin-html": "^3.2.1",
+    "vite-plugin-solid": "^2.8.0"
   }
 }
