--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
     "forge": "pnpm --filter @mattrax/forge --",
     "policy": "pnpm --filter @mattrax/policy --",
     "typecheck": "tsc -b"
+  },
+  "dependencies": {
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@hono/vite-dev-server@0.3.4": "patches/@hono__vite-dev-server@0.3.4.patch"
+    }
   }
 }
