--- a/packages/policy/package.json
+++ b/packages/policy/package.json
@@ -3,5 +3,8 @@
   "type": "module",
   "description": "Mattrax's policy engine",
   "private": true,
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "zod": "^3.22.4"
+  }
 }
