--- a/forge/package.json
+++ b/forge/package.json
@@ -15,6 +15,7 @@
     "vbuild": "NITRO_PRESET=vercel_edge vinxi build"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.1.11",
     "@kobalte/core": "^0.12.0",
     "@kobalte/tailwindcss": "^0.9.0",
     "@mattrax/policy": "workspace:^",
@@ -24,11 +25,13 @@
     "base58": "^2.0.1",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
+    "hono": "^3.12.6",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
     "tiny-invariant": "^1.3.1",
     "valibot": "^0.25.0",
-    "vinxi": "^0.1.4"
+    "vinxi": "^0.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.169",
