--- a/api/package.json
+++ b/api/package.json
@@ -2,47 +2,25 @@
   "name": "@mattrax/api",
   "type": "module",
   "private": true,
+  "sideEffects": false,
+  "main": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts"
-  },
-  "scripts": {
-    "typecheck": "echo 'todo'",
-    "db:push": "drizzle-kit push:mysql",
-    "db:studio": "drizzle-kit studio"
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    }
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.11",
-    "@kobalte/core": "^0.12.0",
-    "@kobalte/tailwindcss": "^0.9.0",
-    "@mattrax/api": "workspace:^",
     "@mattrax/policy": "workspace:^",
-    "@planetscale/database": "^1.13.0",
-    "@solidjs/router": "^0.10.9",
-    "@solidjs/start": "^0.4.9",
+    "@planetscale/database": "^1.14.0",
+    "@t3-oss/env-core": "^0.7.3",
     "base58": "^2.0.1",
-    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.6",
-    "solid-js": "^1.8.11",
-    "tailwindcss": "^3.4.1",
-    "tiny-invariant": "^1.3.1",
-    "valibot": "^0.26.0",
-    "vinxi": "^0.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.169",
-    "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "autoprefixer": "^10.4.16",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.12",
-    "postcss": "^8.4.33",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "tsc-silent": "^1.2.2",
-    "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.3",
-    "unplugin-icons": "^0.18.2",
-    "vite": "^5.0.11"
+    "@microsoft/microsoft-graph-types": "^2.40.0"
   }
 }
