--- a/forge/package.json
+++ b/forge/package.json
@@ -2,48 +2,35 @@
   "name": "@mattrax/forge",
   "type": "module",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "dev": "vinxi dev --host 0.0.0.0",
     "build": "vinxi build",
-    "typecheck": "tsc-silent -p tsconfig.json --suppress @/node_modules/",
     "start": "vinxi start",
-    "db:push": "drizzle-kit push:mysql",
-    "db:studio": "drizzle-kit studio",
     "vbuild": "NITRO_PRESET=vercel_edge vinxi build"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.1.11",
-    "@kobalte/core": "^0.12.0",
+    "@kobalte/core": "^0.12.1",
     "@kobalte/tailwindcss": "^0.9.0",
     "@mattrax/api": "workspace:^",
-    "@mattrax/policy": "workspace:^",
-    "@planetscale/database": "^1.13.0",
     "@solidjs/router": "^0.10.9",
-    "@solidjs/start": "^0.4.9",
-    "base58": "^2.0.1",
+    "@solidjs/start": "^0.4.10",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.3",
     "hono": "^3.12.6",
     "solid-js": "^1.8.11",
     "tailwindcss": "^3.4.1",
     "tiny-invariant": "^1.3.1",
-    "valibot": "^0.26.0",
     "vinxi": "^0.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.169",
-    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@iconify/json": "^2.2.171",
     "@tailwindcss/forms": "^0.5.7",
-    "autoprefixer": "^10.4.16",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.12",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "rollup-plugin-visualizer": "^5.12.0",
-    "tsc-silent": "^1.2.2",
-    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-icons": "^0.18.2",
-    "vite": "^5.0.11"
+    "vite": "^5.0.12"
   }
 }
