--- a/packages/policy/package.json
+++ b/packages/policy/package.json
@@ -1,17 +1,20 @@
 {
   "name": "@mattrax/policy",
   "type": "module",
-  "description": "Mattrax's policy engine",
   "private": true,
-  "scripts": {},
+  "sideEffects": false,
+  "main": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    }
   },
   "dependencies": {
     "plist": "^3.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2"
+    "@types/plist": "^3.0.5"
   }
 }
