--- a/packages/policy/tsconfig.json
+++ b/packages/policy/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist"
+  },
   "include": ["src/"],
   "exclude": ["node_modules", "dist"]
 }
