custom secret for SNS webhook auth

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
+SNS_SHARED_SECRET=areallylongsecretthatyoushouldreplace
 MSFT_CLIENT_ID=
 MSFT_CLIENT_SECRET=
 MSFT_ADMIN_TENANT=
