Device enrollment webhook + serve devices from DB also drop SES + SNS system

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
-SNS_SHARED_SECRET=areallylongsecretthatyoushouldreplace
+INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
+VERCEL_URL=http://localhost:3000
 MSFT_CLIENT_ID=
 MSFT_CLIENT_SECRET=
 MSFT_ADMIN_TENANT=
