--- a/api/package.json
+++ b/api/package.json
@@ -18,11 +18,9 @@
     "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.6",
-    "sns-validator": "^0.3.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@types/sns-validator": "^0.3.3"
+    "@microsoft/microsoft-graph-types": "^2.40.0"
   }
 }
