--- a/forge/package.json
+++ b/forge/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.0",
     "hono": "^3.12.6",
     "solid-js": "^1.8.11",
+    "solid-sonner": "^0.2.2",
     "tailwindcss": "^3.4.1",
     "tiny-invariant": "^1.3.1",
     "vinxi": "^0.1.4",
