--- a/forge/package.json
+++ b/forge/package.json
@@ -13,9 +13,13 @@
     "@kobalte/core": "^0.12.1",
     "@kobalte/tailwindcss": "^0.9.0",
     "@mattrax/api": "workspace:^",
+    "@solid-primitives/broadcast-channel": "^0.0.104",
+    "@solid-primitives/deep": "^0.2.5",
+    "@solid-primitives/storage": "^2.1.2",
     "@solidjs/router": "^0.10.9",
     "clsx": "^2.1.0",
     "hono": "^3.12.6",
+    "idb-keyval": "^6.2.1",
     "solid-js": "^1.8.11",
     "solid-sonner": "^0.2.2",
     "tailwindcss": "^3.4.1",
