--- a/forge/package.json
+++ b/forge/package.json
@@ -13,7 +13,9 @@
     "@kobalte/core": "^0.12.1",
     "@kobalte/tailwindcss": "^0.9.0",
     "@mattrax/api": "workspace:^",
+    "@solid-primitives/pagination": "^0.2.10",
     "@solidjs/router": "^0.10.9",
+    "@tanstack/solid-virtual": "^3.0.2",
     "clsx": "^2.1.0",
     "hono": "^3.12.6",
     "solid-js": "^1.8.11",
