--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "resolveJsonModule": true
   },
-  "include": ["src/"],
+  "include": ["src/", "src/**/*.json"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "../packages/policy" }]
 }
