--- a/forge/package.json
+++ b/forge/package.json
@@ -13,11 +13,15 @@
     "@kobalte/core": "^0.12.1",
     "@kobalte/tailwindcss": "^0.9.0",
     "@mattrax/api": "workspace:^",
+    "@solid-primitives/pagination": "^0.2.10",
     "@solidjs/router": "^0.10.9",
+    "@tanstack/solid-virtual": "^3.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "hono": "^3.12.6",
     "solid-js": "^1.8.12",
     "solid-sonner": "^0.2.2",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "vinxi": "^0.1.4",
     "zod": "^3.22.4"
