--- a/forge/package.json
+++ b/forge/package.json
@@ -15,10 +15,11 @@
     "@mattrax/api": "workspace:^",
     "@solid-primitives/pagination": "^0.2.10",
     "@solidjs/router": "^0.10.9",
-    "@tanstack/solid-virtual": "^3.0.2",
+    "@tanstack/solid-table": "^8.11.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "hono": "^3.12.6",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.12",
     "solid-sonner": "^0.2.2",
     "tailwind-merge": "^2.2.1",
@@ -32,6 +33,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "rollup-plugin-visualizer": "^5.12.0",
+    "tailwindcss-animate": "^1.0.7",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-icons": "^0.18.2",
     "vite": "^5.0.12",
