Improve `CreateTenantDialog` + `@mattrax/api/server`

--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,20 @@
     ".": {
       "import": "./src/index.ts",
       "types": "./src/index.ts"
+    },
+    "./server": {
+      "import": "./src/server.ts",
+      "types": "./src/server.ts"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./src/index.ts"
+      ],
+      "server": [
+        "./src/server.ts"
+      ]
     }
   },
   "dependencies": {
