--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ MSFT_CLIENT_ID=
 MSFT_CLIENT_SECRET=
 MSFT_ADMIN_TENANT=
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
