Link and sync users with Entra ID + move back to `@microsoft/microsoft-graph-client`

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
 PROD_URL=http://localhost:3000
-MSFT_CLIENT_ID=
-MSFT_CLIENT_SECRET=
-MSFT_ADMIN_TENANT=
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
+# Syncing users
+ENTRA_CLIENT_ID=
+ENTRA_CLIENT_SECRET=
+# Access Mattrax's Intune
+INTUNE_CLIENT_ID=
+INTUNE_CLIENT_SECRET=
+INTUNE_TENANT=
