--- a/api/package.json
+++ b/api/package.json
@@ -26,18 +26,19 @@
   },
   "dependencies": {
     "@mattrax/policy": "workspace:^",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.14.0",
     "@t3-oss/env-core": "^0.8.0",
     "@trpc/server": "^10.45.0",
     "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
-    "hono": "^3.12.8",
+    "hono": "^3.12.10",
     "stripe": "^14.14.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@types/stripe": "^8.0.417"
+    "@microsoft/microsoft-graph-types": "^2.40.0"
   }
 }
