--- a/forge/package.json
+++ b/forge/package.json
@@ -17,27 +17,29 @@
     "@solid-mediakit/trpc": "^1.0.2",
     "@solid-primitives/event-listener": "^2.3.1",
     "@solid-primitives/pagination": "^0.2.10",
-    "@solidjs/router": "^0.10.10",
-    "@tanstack/query-broadcast-client-experimental": "^5.17.19",
-    "@tanstack/query-sync-storage-persister": "^5.17.19",
-    "@tanstack/solid-query": "^5.17.19",
-    "@tanstack/solid-query-devtools": "^5.17.21",
-    "@tanstack/solid-query-persist-client": "^5.17.19",
-    "@tanstack/solid-table": "^8.11.7",
+    "@solidjs/router": "^0.11.3",
+    "@tanstack/query-broadcast-client-experimental": "^5.18.1",
+    "@tanstack/query-sync-storage-persister": "^5.18.1",
+    "@tanstack/solid-query": "^5.18.1",
+    "@tanstack/solid-query-devtools": "^5.18.1",
+    "@tanstack/solid-query-persist-client": "^5.18.1",
+    "@tanstack/solid-table": "^8.11.8",
     "@trpc/client": "^10.45.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.12",
     "solid-sonner": "^0.2.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "vinxi": "^0.1.10",
+    "ts-pattern": "^5.0.6",
+    "vinxi": "^0.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.176",
+    "@iconify/json": "^2.2.178",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
