--- a/api/package.json
+++ b/api/package.json
@@ -25,20 +25,25 @@
     }
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.504.0",
+    "@mattrax/email": "workspace:^",
     "@mattrax/policy": "workspace:^",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.14.0",
+    "@react-email/render": "^0.0.12",
     "@t3-oss/env-core": "^0.8.0",
     "@trpc/server": "^10.45.0",
     "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
     "hono": "^3.12.10",
+    "react": "^18.2.0",
     "stripe": "^14.14.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^2.40.0"
+    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@types/react": "^18.2.53"
   }
 }
