--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "pnpm --filter @mattrax/forge dev",
     "landing": "pnpm --filter @mattrax/landing --",
+    "email": "pnpm --filter @mattrax/email --",
     "db:push": "drizzle-kit push:mysql",
     "db:studio": "drizzle-kit studio",
     "typecheck": "tsc -b"
