--- a/api/package.json
+++ b/api/package.json
@@ -43,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@aws-sdk/util-user-agent-node": "^3.502.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/react": "^18.2.53"
   }
