--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "pnpm": {
     "patchedDependencies": {
       "@solid-mediakit/trpc@1.0.2": "patches/@solid-mediakit__trpc@1.0.2.patch",
-      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch"
+      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
+      "stripe@14.14.0": "patches/stripe@14.14.0.patch"
     }
   }
 }
