--- a/landing/tsconfig.json
+++ b/landing/tsconfig.json
@@ -10,6 +10,7 @@
     "allowJs": true,
     "strict": true,
     "noEmit": true,
+    "skipLibCheck": true,
     "types": ["vinxi/client"],
     "isolatedModules": true,
     "paths": {
