cleanup + mutation `onError`

--- a/api/package.json
+++ b/api/package.json
@@ -39,12 +39,12 @@
     "hono": "^3.12.11",
     "react": "^18.2.0",
     "stripe": "^14.15.0",
-    "stripe-cloudflare": "^9.13.4",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@types/microsoft-graph": "^2.40.0",
     "@types/react": "^18.2.54"
   }
 }
