--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "pnpm": {
     "patchedDependencies": {
       "@solid-mediakit/trpc@1.0.2": "patches/@solid-mediakit__trpc@1.0.2.patch",
-      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
-      "@aws-sdk/util-user-agent-node@3.502.0": "patches/@aws-sdk__util-user-agent-node@3.502.0.patch"
+      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch"
     }
   }
 }
