--- a/forge/package.json
+++ b/forge/package.json
@@ -21,10 +21,12 @@
     "@solidjs/router": "^0.11.3",
     "@tanstack/query-broadcast-client-experimental": "^5.18.1",
     "@tanstack/query-sync-storage-persister": "^5.18.1",
+    "@tanstack/solid-form": "^0.13.5",
     "@tanstack/solid-query": "^5.18.1",
     "@tanstack/solid-query-devtools": "^5.18.1",
     "@tanstack/solid-query-persist-client": "^5.18.1",
     "@tanstack/solid-table": "^8.11.8",
+    "@tanstack/zod-form-adapter": "^0.13.5",
     "@thisbeyond/solid-dnd": "^0.7.5",
     "@trpc/client": "^10.45.0",
     "class-variance-authority": "^0.7.0",
