--- a/api/package.json
+++ b/api/package.json
@@ -26,24 +26,24 @@
   },
   "dependencies": {
     "@mattrax/email": "workspace:^",
+    "@mattrax/mdm": "workspace:^",
+    "@mattrax/ms-graph": "workspace:^",
     "@mattrax/policy": "workspace:^",
-    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.15.0",
     "@react-email/render": "^0.0.12",
     "@t3-oss/env-core": "^0.8.0",
-    "@trpc/server": "^10.45.0",
+    "@trpc/server": "^10.45.1",
     "aws4fetch": "^1.0.17",
     "base58": "^2.0.1",
     "drizzle-orm": "^0.29.3",
-    "hono": "^3.12.11",
+    "hono": "^3.12.12",
     "react": "^18.2.0",
     "stripe": "^14.15.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@types/react": "^18.2.54"
+    "@types/react": "^18.2.55"
   }
 }
