--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/react": "^18.2.55"
   }
 }
