Script editor using codejar + Prism

--- a/forge/package.json
+++ b/forge/package.json
@@ -31,7 +31,11 @@
     "@trpc/client": "^10.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "codejar": "^4.2.0",
     "dayjs": "^1.11.10",
+    "prism-code-editor": "^2.4.1",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.14",
     "solid-sonner": "^0.2.2",
@@ -45,6 +49,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.181",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/prismjs": "^1.26.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "rollup-plugin-visualizer": "^5.12.0",
