--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     { "path": "./api" },
     { "path": "./forge" },
     { "path": "./landing" },
+    { "path": "./packages/mdm" },
     { "path": "./packages/policy" },
+    { "path": "./packages/policies" },
     { "path": "./packages/email" }
   ],
   "compilerOptions": {
