--- a/forge/package.json
+++ b/forge/package.json
@@ -20,6 +20,7 @@
     "@solid-primitives/event-listener": "^2.3.1",
     "@solid-primitives/memo": "^1.3.6",
     "@solid-primitives/pagination": "^0.2.10",
+    "@solid-primitives/storage": "^2.1.2",
     "@solidjs/router": "^0.11.5",
     "@tanstack/query-broadcast-client-experimental": "^5.18.1",
     "@tanstack/query-sync-storage-persister": "^5.18.1",
