--- a/.github/workflows/aws-deploy.yaml
+++ b/.github/workflows/aws-deploy.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "aws/**"
+      - "aws/cloudformation.yaml"
   workflow_dispatch:
 
 permissions:
