Update Go version in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Setup Go
         uses: actions/setup-go@v4
+        with:
+          go-version: "1.22.0"
 
       - name: Install Zig toolchain
         uses: korandoru/setup-zig@v1
