--- a/aws/mattrax.service
+++ b/aws/mattrax.service
@@ -1,6 +1,9 @@
+[Unit]
+ConditionPathExists=/var/lib/mattrax/config.json
+
 [Service]
 WorkingDirectory=/home/ec2-user
-ExecStart=/home/ec2-user/mattrax
+ExecStart=/home/ec2-user/mattrax serve
 Restart=always
 PrivateTmp=true
 NoNewPrivileges=true
